# Open3DE-ExtSimInt-Gem

./: CMakeLists.txt  LICENSE  README.md  gem.json
Code/: CMakeLists.txt  open3de-extsimint-gem_api_files.cmake  open3de-extsimint-gem_editor_private_files.cmake  open3de-extsimint-gem_editor_shared_files.cmake  open3de-extsimint-gem_editor_tests_files.cmake  open3de-extsimint-gem_private_files.cmake  open3de-extsimint-gem_shared_files.cmake  open3de-extsimint-gem_tests_files.cmake
Code/Include/Open3DE-ExtSimInt-Gem/: Open3DE-ExtSimInt-GemBus.h  Open3DE-ExtSimInt-GemTypeIds.h  ReceiveMotionParamsInterface.h  TranslatePictureInterface.h
Code/Platform/Android/: open3de-extsimint-gem_shared_files.cmake
Code/Platform/Linux/: open3de-extsimint-gem_private_files.cmake
Code/Platform/Mac/: PAL_mac.cmake  open3de-extsimint-gem_private_files.cmake
Code/Platform/Windows/: open3de-extsimint-gem_shared_files.cmake
Code/Platform/iOS/: open3de-extsimint-gem_shared_files.cmake
Code/Source/: Open3DE-ExtSimInt-GemModuleInterface.cpp  Open3DE-ExtSimInt-GemModuleInterface.h  ReceiveMotionParamsComponent.cpp  ReceiveMotionParamsComponent.h  TranslatePictureComponent.cpp  TranslatePictureComponent.h
Code/Source/Clients/: Open3DE-ExtSimInt-GemModule.cpp  Open3DE-ExtSimInt-GemSystemComponent.cpp  Open3DE-ExtSimInt-GemSystemComponent.h
Code/Source/Tools/: Open3DE-ExtSimInt-GemEditorModule.cpp  Open3DE-ExtSimInt-GemEditorSystemComponent.cpp  Open3DE-ExtSimInt-GemEditorSystemComponent.h
Registry/: assetprocessor_settings.setreg
examples/minimal_app/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  receivevideothread.cpp  receivevideothread.h  translatestatevectorthread.cpp  translatestatevectorthread.h
